[PhuHV] Add user info function.